# aslab-cpp-06-compute-02-matching

./: .gitmodules  CMakeLists.txt  README.md
app/: oclinfo.cc
common/: selector.hpp  utils.hpp
include/ahocorasick/: automaton.hpp
include/common/: opencl_include.hpp  selector.hpp
kernels/: ahocorasick.cl
scripts/: kernel2hpp.py
src/: ahocorasick.cc  oclinfo.cc
